--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,19 @@
 	box-sizing: border-box;
 }
 
+body {
+	font-family: "Open Sans", Arial, Sans-serif;
+	font-size: 16px;
+}
+
+.contenedor {
+	width: 90%;
+	max-width: 1000px;
+	margin: auto;
+	overflow: hidden;
+}
+
+
 
 
 
