--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,16 @@ body {
 	overflow: hidden;
 }
 
+/* ----- ----- HEADER ----- ----- */
+
+header {
+	width: 100%;
+	background: url('../img/bg.jpg') #281a0c;
+	background-size:cover;
+	background-attachment: fixed;
+	background-position: center 0;
+}
+
 
 
 
