--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,16 @@ header .menu a:hover {
 	text-decoration: underline;
 }
 
+header .textos {
+	width: 100%;
+	color: #fff;
+	position: absolute;
+	top: 50%;
+	margin-top:-52px;
+}
+
+
+
 
 
 
