--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,11 @@ header .textos .nombre span {
 	font-weight: 300;
 }
 
+header .textos h3 {
+	font-weight: 300;
+	font-size: 25px;
+	font-style: italic;
+}
 
 
 
