.main .acerca-de .foto

--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,21 @@ header .textos h3 {
 	position: relative;
 }
 
+.main .acerca-de .foto {
+	width: 80%;
+	position: absolute;
+	left: 0;
+	top:-50px;
+	z-index: 0;
+	box-shadow: 0px 0px 15px rgba(0,0,0,.35);
+}
+
+.main .acerca-de .foto img {
+	vertical-align: top;
+	width: 100%;
+}
+
+
 
 
 
