--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,17 @@ header .textos h3 {
 	width: 100%;
 }
 
+.main .acerca-de article {
+	background: #fff;
+	padding: 40px;
+	width: 50%;
+	position: relative;
+	top:500px;
+	z-index: 1;
+	float: right;
+	box-shadow: 0px 0px 15px rgba(0,0,0,.35);
+}
+
 
 
 
