--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,16 @@ header .textos h3 {
 	box-shadow: 0px 0px 15px rgba(0,0,0,.35);
 }
 
+.main .acerca-de article h3 {
+	font-size: 50px;
+	font-weight: 300;
+	margin-bottom: 40px;
+}
+
+.main .acerca-de article p{
+	line-height: 28px;
+	margin-bottom: 15px;
+}
 
 
 
