--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,18 @@ header .textos h3 {
 	margin-bottom: 15px;
 }
 
+.main .menu {
+	padding-top: 570px;
+	margin-bottom: 50px;
+}
+
+.main .menu .titulo {
+	font-size: 40px;
+	font-weight: 300;
+	text-align: center;
+	margin-bottom: 40px;
+}
+
 
 
 
