--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,20 @@ header .textos h3 {
 	text-align: center;
 }
 
+.main .menu .platillo {
+	margin-bottom: 30px;
+	padding-bottom: 20px;
+	border-bottom:4px dotted #000;
+	overflow: hidden;
+}
+
+.main .menu .nombre {
+	font-size: 20px;
+	margin-bottom: 15px;
+	float: left;
+}
+
+
 
 
 
