--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,17 @@ header .textos h3 {
 	float: left;
 }
 
+.main .menu .precio {
+	font-size: 20px;
+	margin-bottom: 15px;
+	float: right;
+}
+
+.main .menu .descripcion {
+	font-size: 16px;
+	color: #676767;
+	clear: both;
+}
 
 
 
