.main .ubicacion .titulo

--- a/css/style.css
+++ b/css/style.css
@@ -208,5 +208,15 @@ header .textos h3 {
 	overflow: hidden;
 }
 
+.main .ubicacion .titulo {
+	text-align: center;
+	font-size: 40px;
+	line-height: 40px;
+	font-weight: 300;
+	margin-bottom: 40px;
+}
+
+
+
 
 
