--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,12 @@ header .textos h3 {
 	text-align: left;
 }
 
+.main .ubicacion .horarios {
+	float: right;
+	width: 50%;
+	text-align: right;
+	overflow: hidden;
+}
 
 
 
