--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,16 @@ header .textos h3 {
 	margin-bottom: 15px;
 }
 
+.main .ubicacion .horarios h4 {
+	text-align: center;
+	margin-bottom: 20px;
+}
 
+.main .ubicacion .horarios .entre-semana,
+.main .ubicacion .horarios .fin-semana {
+	width: 50%;
+	float: left;
+	text-align: center;
+}
 
 
