--- a/css/style.css
+++ b/css/style.css
@@ -245,4 +245,13 @@ header .textos h3 {
 	text-align: center;
 }
 
+.main .mapa {
+	width: 100%;
+	overflow: hidden;
+}
+
+.main .mapa iframe {
+	width: 100%;
+	max-height: 600px;
+}
 
