--- a/css/style.css
+++ b/css/style.css
@@ -266,4 +266,13 @@ footer .copyright {
 	color: #fff;
 }
 
+/* ----- ----- MEDIA QUERIES ----- ----- */
+@media screen and (max-width: 800px) {
+	header .contenedor {
+		position: static;
+		height: auto;
+	}
+
+
+}
 
