--- a/css/style.css
+++ b/css/style.css
@@ -282,6 +282,13 @@ footer .copyright {
 		text-align: center;
 	}
 
-	
+	header .menu a {
+		margin: 10px 20px;
+	}
+
+	header .textos .nombre {
+		font-size: 30px;
+	}
+
 }
 
