--- a/css/style.css
+++ b/css/style.css
@@ -299,5 +299,14 @@ footer .copyright {
 		position: relative;
 	}
 
+	.main .acerca-de article {
+		position: relative;
+		width: 100%;
+		top:-50px;
+		transform:translate(0px, 0);
+	}
+
+	
+	
 }
 
