--- a/css/style.css
+++ b/css/style.css
@@ -314,6 +314,13 @@ footer .copyright {
 		width: 100%;
 	}
 
-	
+	.main .galeria .foto {
+		width: 50%;
+	}
+
+	.main .mapa {
+		width: 80%;
+		margin: auto;
+	}
 }
 
