max-width: 400px

--- a/css/style.css
+++ b/css/style.css
@@ -324,3 +324,14 @@ footer .copyright {
 	}
 }
 
+@media screen and (max-width: 400px) {
+	.main .acerca-de article h3 {
+		font-size: 34px;
+		margin-bottom: 10px;
+	}
+
+	
+	
+
+	
+}
